refactor: clean up SecurityConfig for better static resource handling
- Remove unnecessary header configurations
- Simplify security configuration for static resources
- Ensure static resources bypass security cache control